# SwapGo_Local

./: README.md  swapgo-launcher.bat  swapgo-launcher.pyw
swapgo-backend/: .env.example  README.md  pyproject.toml  reset_demo.py  run.py  seed_candles_itest.py  swapgo.db-shm
swapgo-backend/app/: config.py  deps.py  main.py
swapgo-backend/app/api/: envelope.py  ws.py
swapgo-backend/app/api/v1/: admin.py  ai.py  auth.py  chart.py  explorer.py  glossary.py  liquidity.py  market.py  pools.py  swap.py  transactions.py  wallet.py
swapgo-backend/app/core/: amount.py  crypto.py  errors.py  hashing.py  mnemonic.py  security.py  time.py
swapgo-backend/app/db/: base.py
swapgo-backend/app/db/models/: __init__.py  ai_prediction.py  ai_sentiment.py  ai_signal.py  api_key.py  (+11 more)
swapgo-backend/app/schemas/: admin.py  ai.py  auth.py  chart.py  common.py  glossary.py  liquidity.py  market.py  pool.py  swap.py  tx.py  wallet.py
swapgo-backend/app/seeders/: seed_bot.py  seed_glossary.py  seed_pools.py
swapgo-backend/app/services/: ai_ingest_service.py  amm_engine.py  auth_service.py  chart_service.py  glossary_service.py  holdings_service.py  ledger_service.py  liquidity_service.py  market_service.py  notifier.py  orderbook_synth.py  pool_service.py  swap_service.py  wallet_service.py
swapgo-backend/app/workers/: candle_aggregator.py  merkle_snapshotter.py
swapgo-backend/tests/: conftest.py
swapgo-backend/tests/e2e/: test_glossary_and_explorer.py  test_swap_flow.py
swapgo-backend/tests/unit/: test_amm_engine.py  test_crypto.py  test_ledger.py  test_orderbook_synth.py
(+75 files in other folders)
